feat: dev-machine page images

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -25,7 +25,7 @@ order: 3
       </div>
 
       <div class="col-md-6 col-sm-12 right-img">
-        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-dm/Building.svg"/>
       </div>
     </div>
   </div>
@@ -55,16 +55,16 @@ order: 3
           <li>Vie extra-professionnelle (dit “Comité des Fêtes”)</li>
         </ul>
       </div>
-      <div class="col-md-3 offset-md-1 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 offset-md-1 col-sm-12 text-center">
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/force/Review.svg"/>
       </div>
     </div>
 
     <hr />
 
     <div class="row align-items-center dm-item sm-reverse">
-      <div class="col-md-3 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 col-sm-12 text-center">
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/force/Sign.svg"/>
       </div>
       <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Le CODOR - COmité D’ORientation</h2>
@@ -79,8 +79,8 @@ order: 3
         <h2>Le recrutement</h2>
         <p class="text-grey text-justify">L’équipe choisit ses futurs collègues. Vient qui veut aux échanges avec les candidats, pour une délibération collective dès la fin de RV avec nécessité de l’unanimité pour avancer davantage avec le candidat.</p>
       </div>
-      <div class="col-md-3 offset-md-1 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 offset-md-1 col-sm-12 text-center">
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/force/Interview.svg"/>
       </div>
     </div>
 
@@ -101,8 +101,8 @@ order: 3
     </div>
 
     <div class="row align-items-center dm-item sm-reverse">
-      <div class="col-md-3 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 col-sm-12 text-center">
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Bretagne.svg"/>
       </div>
       <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Implantés à Rennes et Lannion</h2>
@@ -118,16 +118,16 @@ order: 3
         <p class="text-justify">Nos clients sont majoritairement présents sur le territoire breton : Ille-et-Vilaine, Côtes d’Armor, Morbihan, Loire-Atlantique.</p>
         <p>Nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
       </div>
-      <div class="col-md-3 offset-md-1 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 offset-md-1 col-sm-12 text-center">
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Map.svg"/>
       </div>
     </div>
 
     <hr />
 
     <div class="row align-items-center dm-item sm-reverse">
-      <div class="col-md-3 col-sm-12">
-        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
+      <div class="col-md-3 col-sm-12 text-center">
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Handshake.svg"/>
       </div>
       <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Soutien aux associations et réseaux locaux</h2>
@@ -164,21 +164,29 @@ order: 3
     </div>
 
     <div class="rse-item" id="environnemental">
-      <div class="d-flex">
+      <div class="d-flex align-items-center">
         <p class="title mb-0 mr-3">Environnemental</p>
         <img class="leaf" alt="" src="/assets/images/website/page-dm/rse/leaf.svg" />
       </div>
       <div class="rse-subitems">
-        <p class="text-orange">Limitation des temps de trajets et de la circulation automobile</p>
+        <p class="info text-orange">Limitation des temps de trajets et de la circulation automobile</p>
         <p>Consommation vertueuse / tri</p>
         <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
+        <div id="environnemental-items">
+          <ul class="arrow-list">
+            <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
+            <li>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
+            <li>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
+            <li>Cuisine équipée pour déjeuner dans les locaux.</li>
+          </ul>
+        </div>
       </div>
     </div>
 
     <div class="rse-item" id="societal">
       <div class="d-flex">
         <p class="title mb-0 mr-3">Sociétal</p>
-        <img class="leaf" alt="" src="/assets/images/website/page-dm/rse/leaf.svg" />
+        <!-- <img class="confettis" alt="" src="" /> -->
       </div>
       <div class="rse-subitems">
         <p>DEVmachine fait appel à l’ESAT Utopi</p>
@@ -186,11 +194,4 @@ order: 3
       </div>
     </div>
   </div>
-
-  <ul class="arrow-list">
-    <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
-    <li>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
-    <li>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
-    <li>Cuisine équipée pour déjeuner dans les locaux.</li>
-  </ul>
 </section>
