fix: remove useless alt

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -25,7 +25,7 @@ order: 3
       </div>
 
       <div class="col-md-6 col-sm-12 right-img">
-        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-dm/Building.svg"/>
+        <img class="w-100" alt="" src="/assets/images/website/page-dm/Building.svg"/>
       </div>
     </div>
   </div>
