--- a/pages/offre.html
+++ b/pages/offre.html
@@ -22,7 +22,7 @@ order: 1
       </div>
       <div class="col-md-6 offset-md-1 col-sm-12 right-img">
         <div class="image-container">
-          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-offre/Marketing.svg"/>
+          <img class="w-100" alt="" src="/assets/images/website/page-offre/Marketing.svg"/>
         </div>
         <div class="bg-orange"></div>
       </div>
