--- a/pages/recrutement.html
+++ b/pages/recrutement.html
@@ -16,7 +16,7 @@ order: 6
       </div>
 
       <div class="col-md-6 col-sm-12 right-img">
-        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+        <img class="w-100" alt="" src="/assets/images/website/dm-group.jpg"/>
       </div>
 
     </div>
