--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ exclude-nav: true
 
       <div class="col-md-6 col-sm-12 shape-container right-img">
         <div class="image-container">
-          <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/page-index/dm-group.jpg"/>
+          <img class="w-100" alt="" src="/assets/images/website/page-index/dm-group.jpg"/>
         </div>
         <div class="bg-orange"></div>
       </div>
