feat: contact page images

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,7 @@ order: 4
       </div>
 
       <div class="col-md-6 col-sm-12 right-img">
-        <img class="w-100" alt="Team DEVmachine" src="/assets/images/website/dm-group.jpg"/>
+        <img class="w-100" alt="" src="/assets/images/website/page-contact/Chat.svg"/>
       </div>
 
     </div>
@@ -31,7 +31,7 @@ order: 4
   <div class="container">
     <div class="row contact-items-container">
       <div class="contact-item">
-        <img alt="" src="/assets/images/website/page-contact/linkedin.svg" />
+        <img class="path" alt="" src="/assets/images/website/page-contact/items/Path.svg" />
         <div class="contact-data">
           <p>4 Av. des Peupliers<br/>
           Bâtiment F - 1er étage<br/>
@@ -40,14 +40,14 @@ order: 4
       </div>
       
       <div class="contact-item">
-        <img alt="" src="/assets/images/website/page-contact/linkedin.svg" />
+        <img alt="" src="/assets/images/website/page-contact/items/Mail.svg" />
         <div class="contact-data">
           <a class="text-orange" href="mailto:contact@devmachine.fr">contact@devmachine.fr</a>
         </div>
       </div>
       
       <div class="contact-item">
-        <img alt="" src="/assets/images/website/page-contact/linkedin.svg" />
+        <img alt="" src="/assets/images/website/page-contact/items/linkedin.svg" />
         <div class="contact-data">
           <a target="_blank" href="https://www.linkedin.com/company/devmachine/">@devmachine</a>
         </div>
