fix: missing images & styke

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -169,17 +169,19 @@ order: 3
         <img class="leaf" alt="" src="/assets/images/website/page-dm/rse/leaf.svg" />
       </div>
       <div class="rse-subitems">
-        <p class="info text-orange">Limitation des temps de trajets et de la circulation automobile</p>
+        <span class="info">
+          <p>Limitation des temps de trajets et de la circulation automobile</p>
+          <div id="environnemental-items">
+            <ul class="arrow-list">
+              <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
+              <li>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
+              <li>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
+              <li>Cuisine équipée pour déjeuner dans les locaux.</li>
+            </ul>
+          </div>
+        </span>
         <p>Consommation vertueuse / tri</p>
         <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
-        <div id="environnemental-items">
-          <ul class="arrow-list">
-            <li>Choix collectif de la localisation des locaux au plus près des domiciles de l’équipe et à proximité immédiate des transports en commun (bus, train) et des services de restauration.</li>
-            <li>Mise en place du télétravail dès la création de la société pour un meilleur équilibre vie pro. - vie perso.</li>
-            <li>Mise en place des “IKV” (Indemnités kilométriques vélo) pour favoriser les mobilités douces.</li>
-            <li>Cuisine équipée pour déjeuner dans les locaux.</li>
-          </ul>
-        </div>
       </div>
     </div>
 
