--- a/pages/offre.html
+++ b/pages/offre.html
@@ -49,6 +49,8 @@ order: 1
   </div>
 </section>
 
+<section id="offre-separate"></section>
+
 <section id="offre-prestations">
   <div class="container">
     <div class="row">
