feat: improve rse part

--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -156,10 +156,10 @@ order: 3
       </div>
 
       <div class="rse-subitems">
-        <p>Conditions de travail</p>
-        <p>Partage des richesses</p>
-        <p>Santé psychologique</p>
-        <p>Développement des compétences</p>
+        <p class="col-lg-3 col-md-6 col-sm-12">Conditions de travail</p>
+        <p class="col-lg-3 col-md-6 col-sm-12">Partage des richesses</p>
+        <p class="col-lg-3 col-md-6 col-sm-12">Santé psychologique</p>
+        <p class="col-lg-3 col-md-6 col-sm-12">Développement des compétences</p>
       </div>
     </div>
 
@@ -169,7 +169,7 @@ order: 3
         <img class="leaf" alt="" src="/assets/images/website/page-dm/rse/leaf.svg" />
       </div>
       <div class="rse-subitems">
-        <span class="info">
+        <span class="col-lg-4 col-md-6 col-sm-12 info">
           <p>Limitation des temps de trajets et de la circulation automobile</p>
           <div id="environnemental-items">
             <ul class="arrow-list">
@@ -180,8 +180,8 @@ order: 3
             </ul>
           </div>
         </span>
-        <p>Consommation vertueuse / tri</p>
-        <p>Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
+        <p class="col-lg-4 col-md-6 col-sm-12">Consommation vertueuse / tri</p>
+        <p class="col-lg-4 offset-lg-0 col-md-6 offset-md-3 col-sm-12">Soutien à des actions en faveur de l’environnement ou de programmes humanitaires</p>
       </div>
     </div>
 
@@ -191,8 +191,8 @@ order: 3
         <!-- <img class="confettis" alt="" src="" /> -->
       </div>
       <div class="rse-subitems">
-        <p>DEVmachine fait appel à l’ESAT Utopi</p>
-        <p>DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
+        <p class="col-md-6 col-sm-12">DEVmachine fait appel à l’ESAT Utopi</p>
+        <p class="col-md-6 col-sm-12">DEVmachine reverse tous les ans sa taxe d’apprentissage à l’association FACE (“Fondation Agir Contre l’Exclusion”)</p>
       </div>
     </div>
   </div>
