feat: offre items + some fix

--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -64,3 +64,19 @@ order: 2
     </div>
   </div>
 </section>
+
+<!-- EN SAVOIR PLUS -->
+<section id="index-savoir-plus" class="bg-pink mb-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6 col-sm-12 text-center">
+        <img class="w-75" alt="" src="/assets/images/website/page-index/savoir-plus/Julien.png"/>
+      </div>
+      <div class="col-md-6 col-sm-12 text-center text-blue">
+        <h2>En savoir plus sur DEVmachine</h2>
+        <p>Co-construction, RSE, locaux, équipe, etc...</p>
+        <a class="dm-btn dm-btn-orange" href="/dev-machine"><span aria-hidden="true" class="fas fa-chevron-right"></span></a>
+      </div>
+    </div>
+  </div>
+</section>
