--- a/pages/offre.html
+++ b/pages/offre.html
@@ -36,14 +36,50 @@ order: 1
       <h1 class="section-heading">Vision globale du développement logiciel</h1>
       <h2 class="section-subheading">Nous sécurisons l’ensemble des facettes d’un développement applicatif</h2>
     </div>
-    <div class="row mt-5">
-      <div>
-        <p><b>TODO (pas clair sur la maquette)</b></p>
-        <p>Centrée utilisateur</p>
-        <p>Pérennité technique de la solution développée</p>
-        <p>Amélioration continue</p>
-        <p>Facilités de déploiement et d’infogérance</p>
-        <p>Gestion de problématiques techniques transverses</p>
+    
+    <div class="items-container">
+      <div class="row items-row">
+        <div class="col-md-6 col-sm-12">
+          <div id="item-1" class="item">
+            Centrée utilisateur
+            <span class="info-icon">i</span>
+            <!-- info popover -->
+            <span class="info-data">Toutes nos applis sont testestestestestes testsToutes nos applis sont testestestestestes testsToutes</span>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <div id="item-2" class="item">
+            Pérennité technique de la solution développée
+            <span class="info-icon">i</span>
+            <!-- info popover -->
+            <span class="info-data">TODO: add info-data</span>
+          </div>
+        </div>
+      </div>
+      <div class="row items-row">
+        <div class="col-md-6 col-sm-12">
+          <div id="item-3" class="item">
+            Amélioration continue
+            <span class="info-icon">i</span>
+            <span class="info-data">TODO: add info-data</span>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <div id="item-4" class="item">
+            Facilités de déploiement et d’infogérance
+            <span class="info-icon">i</span>
+            <span class="info-data">TODO: add info-data</span>
+          </div>
+        </div>
+      </div>
+      <div class="row items-row">
+        <div class="col-12">
+          <div id="item-5" class="item">
+            Gestion de problématiques techniques transverses
+            <span class="info-icon">i</span>
+            <span class="info-data">TODO: add info-data</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -222,5 +258,40 @@ order: 1
       <p>Nous travaillons très majoritairement dans nos locaux, et sommes par nature très à l’aise et efficaces dans cette organisation, avant même les premiers confinements en 2020.</p>
       <p>Nous intervenons chez nos clients lorsque c'est strictement nécessaire. Cette organisation permet à chaque équipe DEVmachine de bénéficier du savoir-faire des autres équipes pour, au final, délivrer avec un haut niveau de qualité.</p>
     </div>
+  </div>
+</section>
+
+<!-- SAVOIR-FAIRE -->
+<section id="index-savoir-faire" class="mb-5">
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Nos savoir-faire</h1>
+      <h2 class="section-subheading">Compétences et soft skills</h2>
+    </div>
+    <div class="row skill-item-container">
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/lance-pierre.svg"/>
+        <h3>Des compétences</h3>
+        <p>Majoritairement techniques</p>
+      </div>
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/Conversion-rate.svg"/>
+        <h3>Des outils</h3>
+        <p>Au service de la productivité des équipes</p>
+      </div>
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/Launch-project.svg"/>
+        <h3>Des pratiques agiles</h3>
+        <p>Inspirées de Kanban et de Scrum</p>
+      </div>
+      <div class="col-lg-6 col-md-12 skill-item">
+        <img alt="" src="/assets/images/website/page-index/savoir-faire/Newtons.svg"/>
+        <h3>Un état d’esprit individuel et collectif</h3>
+        <p>Aligné sur nos valeurs : entraide, curiosité, partage d’informations, sens du service...</p>
+      </div>
+    </div>
+    <a class="dm-btn dm-btn-orange" href="/savoir-faire">
+      Découvrir notre savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
+    </a>
   </div>
 </section>
