feat: netlify try

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,3 +55,13 @@ order: 4
     </div>
   </div>
 </section>
+
+<section id="contact-form">
+  <div>
+    <form name="contact-form" method="post" netlify>
+      <label for="email">Your email:</label>
+      <input id="email" name="email" type="email" required />
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</section>
