--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,34 @@ order: 4
   </div>
 </section>
 
+<section id="contact-form">
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Contactez-nous</h1>
+    </div>
+
+    <form name="contact-form" method="post" class="col-md-10 offset-md-1 col-sm-12" netlify>
+      <!-- Nom -->
+      <div class="mb-3">
+        <label class="form-label" for="name">Votre nom :</label>
+        <input class="form-control" id="name" name="name" required />
+      </div>
+      <!-- Mail -->
+      <div class="mb-3">
+        <label class="form-label" for="email">Votre mail :</label>
+        <input class="form-control" id="email" email="name" type="email" required />
+      </div>
+      <!-- Text -->
+      <div class="mb-3">
+        <label class="form-label" for="question">Votre question ou demande : </label>
+        <textarea class="form-control" id="question" name="question" rows="5"></textarea>
+      </div>
+      <!-- Envoyer -->
+      <button type="submit" class="dm-btn dm-btn-blue">Envoyer</button>
+    </form>
+  </div>
+</section>
+
 <section id="contact-items">
   <div class="container">
     <div class="row contact-items-container">
@@ -52,16 +80,6 @@ order: 4
           <a target="_blank" href="https://www.linkedin.com/company/devmachine/">@devmachine</a>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-
-<section id="contact-form">
-  <div>
-    <form name="contact-form" method="post" netlify>
-      <label for="email">Your email:</label>
-      <input id="email" name="email" type="email" required />
-      <button type="submit">Submit</button>
-    </form>
+    </div>  
   </div>
 </section>
