fix: retours page home

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ exclude-nav: true
       <div class="col-md-6 col-sm-12">
         <div class="intro-bg">
           <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
-          <p class="text-grey"><b>DEVmachine est une Software Factory</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des petites équipes pluridisciplinaires dédiées.
+          <p class="text-grey"><b>DEVmachine est une Software Factory</b><br/>Nous construisons des plateformes Web, des applications mobiles et des systèmes d’informations de qualité, en mettant en place des équipes pluridisciplinaires dédiées.
           </p>
         </div>
 
@@ -29,6 +29,47 @@ exclude-nav: true
       </div>
     </div>
   </div>
+</section>
+
+<!-- B2B / B2C -->
+<section id="index-b2b">
+  <div class="container">
+    <div class="row">
+      <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
+      <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
+    </div>
+
+    <div class="row align-items-center mt-5">
+      <div class="col-md-7 offset-md-1 col-sm-12">
+        <ul class="arrow-list">
+          <li>Définition de solution logicielle / définition de produit</li>
+          <li>UX/UI</li>
+          <li>Architecture</li>
+          <li>Développement logiciel</li>
+          <li>Déploiement</li>
+          <li>Maintenance / Infogérance</li>
+        </ul>
+      </div>
+      <div class="col-md-3 offset-md-0 col-sm-6 offset-sm-3">
+        <img class="w-100" alt="" src="/assets/images/website/page-index/B2B/Project-development.svg"/>
+      </div>
+    </div>
+  </div>
+  <img class="leaf" alt="" src="/assets/images/website/page-index/piliers/Leaves.svg" />
+</section>
+
+<!-- IMAGES -->
+<section id="index-images" aria-hidden="true">
+  <div class="shape-container bg-blue"></div>
+  <div class="img-container">
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img1.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img2.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img3.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img4.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img5.jpg" /></div>
+    <div><img alt="" src="/assets/images/website/page-index/images-shape/img6.jpg" /></div>
+  </div>
+  <div class="shape-container bg-pink"></div>
 </section>
 
 <!-- PILIERS -->
@@ -68,47 +109,6 @@ exclude-nav: true
       </div>
     </div>
   </div>
-  <img class="leaf" alt="" src="/assets/images/website/page-index/piliers/Leaves.svg" />
-</section>
-
-<!-- IMAGES -->
-<section id="index-images" aria-hidden="true">
-  <div class="shape-container bg-blue"></div>
-  <div class="img-container">
-    <div><img alt="" src="/assets/images/website/page-index/images-shape/img1.jpg" /></div>
-    <div><img alt="" src="/assets/images/website/page-index/images-shape/img2.jpg" /></div>
-    <div><img alt="" src="/assets/images/website/page-index/images-shape/img3.jpg" /></div>
-    <div><img alt="" src="/assets/images/website/page-index/images-shape/img4.jpg" /></div>
-    <div><img alt="" src="/assets/images/website/page-index/images-shape/img5.jpg" /></div>
-    <div><img alt="" src="/assets/images/website/page-index/images-shape/img6.jpg" /></div>
-  </div>
-  <div class="shape-container bg-pink"></div>
-</section>
-
-<!-- B2B / B2C -->
-<section id="index-b2b">
-  <div class="container">
-    <div class="row">
-      <h1 class="section-heading">Construction de solutions B2B / B2C</h1>
-      <h2 class="section-subheading">Une vision 360° de l’usage à l’exploitation</h2>
-    </div>
-
-    <div class="row align-items-center mt-5">
-      <div class="col-md-7 offset-md-1 col-sm-12">
-        <ul class="arrow-list">
-          <li>Définition de solution logicielle / définition de produit</li>
-          <li>UX/UI</li>
-          <li>Architecture</li>
-          <li>Développement logiciel</li>
-          <li>Déploiement</li>
-          <li>Infogérance</li>
-        </ul>
-      </div>
-      <div class="col-md-3 offset-md-0 col-sm-6 offset-sm-3">
-        <img class="w-100" alt="" src="/assets/images/website/page-index/B2B/Project-development.svg"/>
-      </div>
-    </div>
-  </div>
 </section>
 
 <div class="container">
@@ -120,7 +120,7 @@ exclude-nav: true
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Nos prestations</h1>
-      <h2 class="section-subheading">Une réponse pour chacune de vos questions</h2>
+      <h2 class="section-subheading">Une réponse à chacune de vos questions</h2>
     </div>
     <div class="questions">
       <div class="question-item-container">
@@ -131,19 +131,19 @@ exclude-nav: true
       </div>
       <div class="question-item-container">
         <a class="dm-btn question-item float-right" href="/offre#offre-4">
-          <span>Je souhaite désengorger ma dette technique, challenger ma stack technique</span><!--
+          <span>Je souhaite désengorger ma dette technique ou challenger ma stack technique</span><!--
           --><span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </div>
       <div class="question-item-container">
-        <a class="dm-btn question-item" href="/offre#offre-5">
-          <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
-          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
-        </a>
-      </div>
-      <div class="question-item-container">
-        <a class="dm-btn question-item float-right" href="/offre#offre-2">
+        <a class="dm-btn question-item" href="/offre#offre-2">
           <span>Je souhaite faire développer ou faire évoluer une solution</span><!--
+          --><span aria-hidden="true" class="fas fa-chevron-right"></span>
+        </a>
+      </div>
+      <div class="question-item-container">
+        <a class="dm-btn question-item float-right" href="/offre#offre-5">
+          <span>Je souhaite industrialiser la production logicielle de mes projets pour accélérer le time-to-market</span><!--
           --><span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </div>
@@ -155,7 +155,7 @@ exclude-nav: true
       </div>
       <div class="question-item-container">
         <a class="dm-btn question-item float-right" href="/offre#offre-6">
-          <span>Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</span><!--
+          <span>Je souhaite déployer dans le Cloud ou sur les stores, ou automatiser les déploiements</span><!--
           --><span aria-hidden="true" class="fas fa-chevron-right"></span>
         </a>
       </div>
@@ -201,7 +201,7 @@ exclude-nav: true
       </div>
     </div>
     <a class="dm-btn dm-btn-orange" href="/savoir-faire">
-      Découvrir notre savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
+      Découvrir nos savoir-faire<span aria-hidden="true" class="fas fa-chevron-right"></span>
     </a>
   </div>
 </section>
