--- a/pages/offre.html
+++ b/pages/offre.html
@@ -97,7 +97,8 @@ order: 1
     </div>
 
     <!-- Liste des prestations -->
-    <div id="offre-1" class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+      <a class="anchor" name="offre-1"></a>
       <div class="info">
         <h1 class="title">1 - J’ai une idée mais je ne sais pas comment exprimer mon besoin</h1>
         <p class="description">Que vous soyez start-up, ou pas, vous innovez dans votre domaine d’activité, et souhaitez formaliser plus largement le besoin d’une idée principale, définir votre produit.</p>
@@ -115,7 +116,8 @@ order: 1
       </div>
     </div>
 
-    <div id="offre-2" class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+      <a class="anchor" name="offre-2"></a>
       <div class="illustration growing">
         <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Growing.svg" />
       </div>
@@ -144,7 +146,8 @@ order: 1
       </div>
     </div>
 
-    <div id="offre-3" class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+      <a class="anchor" name="offre-3"></a>
       <div class="info">
         <h1 class="title">3 - Je souhaite renforcer mon équipe de développement pour accélérer la mise à disposition de ma solution</h1>
         <ul class="arrow-list description">
@@ -165,13 +168,14 @@ order: 1
       </div>
     </div>
 
-    <div id="offre-4" class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+      <a class="anchor" name="offre-4"></a>
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Confettis.svg" />
       </div>
 
       <div class="info">
-        <h1 class="title">4 - Je souhaite désengorger ma dette technique, challenger ma stack technique</h1>
+        <h1 class="title">4 - Je souhaite désengorger ma dette technique ou challenger ma stack technique</h1>
         <ul class="arrow-list description">
           <li>Expertise technique</li>
           <li>Etude d’impact</li>
@@ -187,7 +191,8 @@ order: 1
       </div>
     </div>
 
-    <div id="offre-5" class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+      <a class="anchor" name="offre-5"></a>
       <div class="info">
         <h1 class="title">5 - Je souhaite industrialiser et fluidifier la production logicielle de mes projets pour accélérer le time-to-market</h1>
         <ul class="arrow-list description">
@@ -208,13 +213,14 @@ order: 1
       </div>
     </div>
 
-    <div id="offre-6" class="row prestation col-lg-10 offset-lg-1 col-md-12">
+    <div class="row prestation col-lg-10 offset-lg-1 col-md-12">
+      <a class="anchor" name="offre-6"></a>
       <div class="illustration">
         <img class="w-100" alt="" src="/assets/images/website/page-offre/prestations/Balls.svg" />
       </div>
 
       <div class="info">
-        <h1 class="title">6 - Je souhaite déployer dans le Cloud, ou sur les stores, et automatiser les déploiements</h1>
+        <h1 class="title">6 - Je souhaite déployer dans le Cloud ou sur les stores, ou automatiser les déploiements</h1>
         <ul class="arrow-list description">
           <li>DevOps</li>
           <li>AWS, GCP, Alibaba, Azure, PlayStore, AppStore</li>
