fix: correction après retours

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@ order: 4
       <div class="col-md-6 col-sm-12">
         <div>
           <h1 class="section-heading">Contactez-nous</h1>
-          <p class="text-grey">Nous sommes toujours ravis de répondre à vos questions !</p>
+          <p class="text-grey">N'hésitez-pas, nous sommes toujours ravis de partager sur notre activité, et répondons systématiquement :</p>
           <ul class="arrow-list text-blue">
             <li>Une étude ou un projet que l’on pourrait accompagner ?</li>
             <li>L’envie de nous rejoindre ?</li>
@@ -61,9 +61,8 @@ order: 4
       <div class="contact-item">
         <img class="path" alt="" src="/assets/images/website/page-contact/items/Path.svg" />
         <div class="contact-data">
-          <p>4 Av. des Peupliers<br/>
-          Bâtiment F - 1er étage<br/>
-          <b>Cesson-Sévigné</b></p>
+          <p>4F, Avenue des Peupliers<br/>
+          35 510 Cesson-Sévigné</p>
         </div>
       </div>
       
