--- a/pages/dev-machine.html
+++ b/pages/dev-machine.html
@@ -14,13 +14,15 @@ order: 3
           <ul class="arrow-list text-blue">
             <li>Un positionnement fort en tant qu’acteur du service numérique, que nous retrouvons dans notre offre de services et nos savoir-faire</li>
             <li>La nécessité de s’appuyer sur un collectif</li>
-            <li>La nécessité de servir et promouvoir le territoire</li>
-            <li>La nécessité de développer une démarche RSE</li>
+            <li>Servir et promouvoir le territoire</li>
+            <li>Développer une démarche RSE</li>
           </ul>
         </div>
 
         <div class="row btn-container">
           <a class="dm-btn dm-btn-blue" href="/contact">Contactez-nous</a>
+          <a class="dm-btn dm-btn-orange" href="/savoir-faire">Le savoir-faire DEVmachine</a>
+          <a class="dm-btn dm-btn-white" href="/offre">Parcourir notre offre</a>
         </div>
       </div>
 
@@ -35,7 +37,7 @@ order: 3
   <div class="container">
     <div class="row">
       <h1 class="section-heading">La force du collectif</h1>
-      <h2 class="section-subheading">En écho à nos prestations que nous réalisons en équipe, nous construisons également DEVmachine en équipe.</h2>
+      <h2 class="section-subheading">En écho aux prestations que nous réalisons en équipe, nous construisons également DEVmachine en équipe</h2>
     </div>
 
     <div class="row">
@@ -46,10 +48,10 @@ order: 3
       <div class="col-md-8 col-sm-12">
         <h2>La co-construction</h2>
         <p class="text-grey">Nous enrichissons DEVmachine tous ensemble de façon itérative.</p>
-        <p class="text-grey">Tous les trimestres, nous nous réunissons par petits groupes pour faire avancer DEVmachine dans ses pratiques sur 5 thématiques majeures :</p>
+        <p class="text-grey">Tous les trimestres, nous nous réunissons par groupes pour faire avancer DEVmachine dans ses pratiques sur 5 thématiques majeures :</p>
         <ul class="arrow-list text-blue">
           <li>Vie d’agence</li>
-          <li>RH/recrutement</li>
+          <li>RH / recrutement</li>
           <li>RSE</li>
           <li>Marketing / Communication</li>
           <li>Vie extra-professionnelle (dit “Comité des Fêtes”)</li>
@@ -68,7 +70,7 @@ order: 3
       </div>
       <div class="col-md-8 offset-md-1 col-sm-12">
         <h2>Le CODOR - COmité D’ORientation</h2>
-        <p class="text-grey text-justify">Tous les semestres, le Comité d’Orientation réunit les 3 associés fondateurs et 2 représentants des salariés (auto-designés par l’équipe à chaque session) pour partager sur l’activité globale de DEVmachine, les opportunités de développement de DEVmachine, les actions à prioriser pour améliorer le quotidien et continuer à fédérer l’équipe.</p>
+        <p class="text-grey text-justify">Tous les semestres, le Comité d’Orientation réunit les 3 associés fondateurs et 2 représentants des salariés (auto-designés par l’équipe à chaque session) pour partager sur l’activité globale de DEVmachine, réfléchir sur les opportunités de développement de DEVmachine, les actions à prioriser pour améliorer le quotidien et continuer à fédérer l’équipe.</p>
       </div>
     </div>
 
@@ -97,14 +99,18 @@ order: 3
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Servir et promouvoir le territoire</h1>
-      <h2 class="section-subheading">DEVmachine s’est créée à Rennes, avec la ferme intention de se développer sur le territoire breton historique, d’accompagner les acteurs économiques et institutionnels bretons, et de faire valoir le savoir-faire des entreprises bretonnes.</h2>
+      <h2 class="section-subheading">DEVmachine s’est créée à Rennes, avec la ferme intention de se développer sur le territoire breton historique, d’accompagner les acteurs économiques et institutionnels bretons, et de faire valoir le savoir-faire des entreprises bretonnes</h2>
     </div>
 
     <div class="row align-items-center dm-item sm-reverse">
-      <div class="col-md-3 col-sm-12 text-center">
-        <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Bretagne.svg"/>
+      <div class="col-md-6 col-sm-12 text-center">
+        <img class="bretagne" alt="" src="/assets/images/website/page-dm/servir/Bretagne.svg"/>
+        <div class="produit-bretagne">
+          <img alt="" src="/assets/images/website/page-dm/servir/produit-bretagne.png"/>
+          <p>Depuis 2022, DEVmachine est adhérent du réseau "Produit en Bretagne", étendard de savoir-faire de la région Bretagne.</p>
+        </div>
       </div>
-      <div class="col-md-8 offset-md-1 col-sm-12">
+      <div class="col-md-6 col-sm-12">
         <h2>Implantés à Rennes et Lannion</h2>
         <p class="text-justify">Aujourd’hui, nous sommes implantés sur <b>Rennes</b> (locaux à Cesson-Sévigné) et <b>Lannion</b> (en espace de co-working pour l’instant).</p>
       </div>
@@ -116,7 +122,7 @@ order: 3
       <div class="col-md-8 col-sm-12">
         <h2>Des clients majoritairement bretons</h2>
         <p class="text-justify">Nos clients sont majoritairement présents sur le territoire breton : Ille-et-Vilaine, Côtes d’Armor, Morbihan, Loire-Atlantique.</p>
-        <p>Nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
+        <p>Par opportunités, nous développons aussi nos savoir-faire dans d’autres régions (Île-de-France, Rhône-Alpes, Paca), et les exportons même sur d’autres continents (Océanie et Afrique).</p>
       </div>
       <div class="col-md-3 offset-md-1 col-sm-12 text-center">
         <img class="w-100" alt="" src="/assets/images/website/page-dm/servir/Map.svg"/>
@@ -134,8 +140,7 @@ order: 3
         <ul class="arrow-list">
           <li><b>Institutionnels</b> : Le Poool, Anticipa, Bretagne Développement Innovation</li>
           <li><b>Professionnels</b> : ADN’Ouest</li>
-          <li><b>Territoriaux</b> : Candidature en cours à Produit En Bretagne</li>
-          <li><b>Technologiques</b> : BreizhCamp, meetup Software Craftsmanship</li>
+          <li><b>Technologiques</b> : BreizhCamp, meetup Software Craftsmanship de Rennes</li>
         </ul>
       </div>
     </div>
@@ -146,7 +151,9 @@ order: 3
   <div class="container">
     <div class="row">
       <h1 class="section-heading">Démarche RSE</h1>
-      <h2 class="section-subheading">Nous portons, depuis la création de la société, une attention particulière sur la RSE. Les actions que nous avons déjà engagées sur les 3 thèmes de la RSE sont les suivantes :</h2>
+      <h2 class="section-subheading">Nous portons, depuis la création de la société, une attention particulière sur la RSE.</h2>
+      <br/>
+      <h2 class="section-subheading">Les actions que nous avons déjà engagées sur les 3 thèmes de la RSE sont les suivantes :</h2>
     </div>
 
     <div class="rse-item" id="social">
