--- a/pages/offre.html
+++ b/pages/offre.html
@@ -10,8 +10,8 @@ order: 1
       <div class="col-md-5 col-sm-12">
         <div class="intro-bg">
           <h1 class="section-heading">Notre offre de services</h1>
-          <p><b>L’équipe DEVmachine répond aux besoins de ses clients en termes de Systèmes d’Informations, de plateformes Web, ou d’applications mobiles.</b></p>
-          <p class="text-grey">Qu’ils s’agissent de leurs solutions B2B ou B2C, et quel que soit leur domaine d’activité, nous construisons avec eux une solution globale, au service de leurs utilisateurs, qui soit pérenne, performante et sécurisée.</p>
+          <p><b>L’équipe DEVmachine répond aux besoins de ses clients en termes de plateformes Web, de Systèmes d’Informations, ou d’applications mobiles.</b></p>
+          <p class="text-grey">Qu’il s’agisse de leurs solutions B2B ou B2C, et quel que soit leur domaine d’activité, nous construisons avec eux une solution globale, au service de leurs utilisateurs, qui soit pérenne, performante et sécurisée.</p>
           </p>
         </div>
 
@@ -262,7 +262,7 @@ order: 1
     <div class="row">
       <h2 class="title">Localisation</h2>
       <p>Nous travaillons très majoritairement dans nos locaux, et sommes par nature très à l’aise et efficaces dans cette organisation, avant même les premiers confinements en 2020.</p>
-      <p>Nous intervenons chez nos clients lorsque c'est strictement nécessaire. Cette organisation permet à chaque équipe DEVmachine de bénéficier du savoir-faire des autres équipes pour, au final, délivrer avec un haut niveau de qualité.</p>
+      <p>Nous intervenons chez nos clients lorsque c'est nécessaire. Cette organisation permet à chaque équipe DEVmachine de bénéficier du savoir-faire des autres équipes pour, au final, délivrer avec un haut niveau de qualité.</p>
     </div>
   </div>
 </section>
