--- a/pages/savoir-faire.html
+++ b/pages/savoir-faire.html
@@ -30,7 +30,7 @@ order: 2
   <div class="container">
 
     <div class="row">
-      <h1 class="section-heading">5 piliers</h1>
+      <h1 class="section-heading">Les ingrédients de nos prestations</h1>
     </div>
 
     <div class="row col-lg-8 offset-lg-2 col-md-12">
